# Fat32DiskImagerParcer

./: .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
src/: CMakeLists.txt  WavHeader.h  argparser.cpp  argparser.h  emfat1.h  main.cpp  str_trim.cpp  str_trim.h
